Colaboratory를 통해 생성됨

--- a/deeplearning2.ipynb
+++ b/deeplearning2.ipynb
@@ -42,14 +42,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "-gE-Ez1qtyIA",
-        "outputId": "58919350-d079-4bca-b055-4c5a9ea1a47d"
+        "outputId": "26add146-935c-492e-8ffa-746f21e28ef1"
       },
       "source": [
         "from tensorflow import keras\n",
         "\n",
         "(train_input, train_target), (test_input, test_target) = keras.datasets.fashion_mnist.load_data()\n"
       ],
-      "execution_count": 2,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -74,14 +74,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "dKmpNb3oLmS3",
-        "outputId": "6f0140ea-f513-443f-94d8-b27df5abbbeb"
+        "outputId": "0b6f3d79-f8c8-4288-bdfe-6e54e122ab26"
       },
       "source": [
         "print(train_input.shape, train_target.shape)\n",
         "print(test_input.shape, test_target.shape)\n",
         "\n"
       ],
-      "execution_count": 3,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -101,7 +101,7 @@
           "height": 78
         },
         "id": "Ul4RUqulLrhW",
-        "outputId": "9ae1503d-bbe9-4d64-838d-1f8066b42bf6"
+        "outputId": "ee3ada31-741f-4930-c82a-56815c207cdc"
       },
       "source": [
         "import matplotlib.pyplot as plt\n",
@@ -111,7 +111,7 @@
         "    axs[i].imshow(train_input[i], cmap='gray_r')\n",
         "    axs[i].axis('off')"
       ],
-      "execution_count": 4,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "display_data",
@@ -135,12 +135,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "X-ffHC6TLuRK",
-        "outputId": "64da8985-3636-4b68-8cfd-311190520e2f"
+        "outputId": "a0ab2a4a-8ee2-4ea2-dbe7-9a5111f46346"
       },
       "source": [
         "print([train_target[i] for i in range(10)])"
       ],
-      "execution_count": 5,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -158,14 +158,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "jzSsib-WL6QM",
-        "outputId": "add5c7a6-7cc6-4743-e7e3-bdeb4e0de12c"
+        "outputId": "6651ba85-1b1a-4cc7-8c96-05072a24de9f"
       },
       "source": [
         "import numpy as np\n",
         "\n",
         "print(np.unique(train_target, return_counts=True))"
       ],
-      "execution_count": 6,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -183,7 +183,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "KSkHlM1KL-L5",
-        "outputId": "a243a2c3-8460-4098-8a11-80ec29d34de0"
+        "outputId": "fd628f53-70d5-42c7-a710-37b5a429e4b6"
       },
       "source": [
         "import tensorflow as tf\n",
@@ -192,7 +192,6 @@
         "from sklearn.model_selection import train_test_split\n",
         "\n",
         "train_scaled = train_input / 255.0\n",
-        "train_scaled = train_scaled.reshape(-1, 28*28)\n",
         "\n",
         "train_scaled, val_scaled, train_target_scaled, val_target_scaled = train_test_split(\n",
         "    train_scaled, train_target, test_size=0.2, random_state=42)\n",
@@ -200,56 +199,75 @@
         "print(train_scaled.shape, train_target_scaled.shape)\n",
         "print(val_scaled.shape, val_target_scaled.shape)\n",
         "\n",
-        "dense = keras.layers.Dense(10, activation='softmax', input_shape=(784,))\n",
-        "model = keras.Sequential(dense)\n",
-        "model.compile(loss='sparse_categorical_crossentropy', metrics='accuracy')\n",
+        "model = keras.Sequential()\n",
+        "model.add(keras.layers.Flatten(input_shape=(28, 28)))\n",
+        "model.add(keras.layers.Dense(100, activation='relu'))\n",
+        "model.add(keras.layers.Dense(10, activation='softmax'))\n",
         "\n",
-        "print(train_target[:10])\n",
-        "model.fit(train_scaled, train_target_scaled, epochs=10)\n",
-        "\n"
+        "print(model.summary())\n",
+        "\n",
+        "sgd = keras.optimizers.SGD()\n",
+        "sgd = keras.optimizers.SGD(learning_rate=0.1)\n",
+        "sgd = keras.optimizers.SGD(momentum=0.9, nesterov=True)\n",
+        "rmsprop = keras.optimizers.RMSprop()\n",
+        "adagrad = keras.optimizers.Adagrad()\n",
+        "adam = keras.optimizers.Adam()\n",
+        "\n",
+        "model.compile(optimizer=rmsprop, loss='sparse_categorical_crossentropy', metrics='accuracy')\n",
+        "\n",
+        "model.fit(train_scaled, train_target_scaled, epochs=5)\n",
+        "\n",
+        "print(model.summary())"
       ],
-      "execution_count": 7,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "(48000, 784) (48000,)\n",
-            "(12000, 784) (12000,)\n",
-            "[9 0 0 3 0 2 7 2 5 5]\n",
-            "Epoch 1/10\n",
-            "1500/1500 [==============================] - 5s 2ms/step - loss: 0.7916 - accuracy: 0.7303\n",
-            "Epoch 2/10\n",
-            "1500/1500 [==============================] - 2s 2ms/step - loss: 0.4843 - accuracy: 0.8400\n",
-            "Epoch 3/10\n",
-            "1500/1500 [==============================] - 2s 2ms/step - loss: 0.4590 - accuracy: 0.8475\n",
-            "Epoch 4/10\n",
-            "1500/1500 [==============================] - 2s 2ms/step - loss: 0.4443 - accuracy: 0.8528\n",
-            "Epoch 5/10\n",
-            "1500/1500 [==============================] - 2s 2ms/step - loss: 0.4406 - accuracy: 0.8537\n",
-            "Epoch 6/10\n",
-            "1500/1500 [==============================] - 2s 2ms/step - loss: 0.4335 - accuracy: 0.8565\n",
-            "Epoch 7/10\n",
-            "1500/1500 [==============================] - 2s 2ms/step - loss: 0.4260 - accuracy: 0.8561\n",
-            "Epoch 8/10\n",
-            "1500/1500 [==============================] - 2s 1ms/step - loss: 0.4283 - accuracy: 0.8590\n",
-            "Epoch 9/10\n",
-            "1500/1500 [==============================] - 2s 2ms/step - loss: 0.4194 - accuracy: 0.8620\n",
-            "Epoch 10/10\n",
-            "1500/1500 [==============================] - 2s 1ms/step - loss: 0.4154 - accuracy: 0.8643\n"
+            "(48000, 28, 28) (48000,)\n",
+            "(12000, 28, 28) (12000,)\n",
+            "Model: \"sequential_3\"\n",
+            "_________________________________________________________________\n",
+            "Layer (type)                 Output Shape              Param #   \n",
+            "=================================================================\n",
+            "flatten_3 (Flatten)          (None, 784)               0         \n",
+            "_________________________________________________________________\n",
+            "dense_6 (Dense)              (None, 100)               78500     \n",
+            "_________________________________________________________________\n",
+            "dense_7 (Dense)              (None, 10)                1010      \n",
+            "=================================================================\n",
+            "Total params: 79,510\n",
+            "Trainable params: 79,510\n",
+            "Non-trainable params: 0\n",
+            "_________________________________________________________________\n",
+            "None\n",
+            "Epoch 1/5\n",
+            "1500/1500 [==============================] - 3s 2ms/step - loss: 0.6922 - accuracy: 0.7631\n",
+            "Epoch 2/5\n",
+            "1500/1500 [==============================] - 3s 2ms/step - loss: 0.4055 - accuracy: 0.8537\n",
+            "Epoch 3/5\n",
+            "1500/1500 [==============================] - 3s 2ms/step - loss: 0.3583 - accuracy: 0.8687\n",
+            "Epoch 4/5\n",
+            "1500/1500 [==============================] - 3s 2ms/step - loss: 0.3365 - accuracy: 0.8810\n",
+            "Epoch 5/5\n",
+            "1500/1500 [==============================] - 3s 2ms/step - loss: 0.3140 - accuracy: 0.8883\n",
+            "Model: \"sequential_3\"\n",
+            "_________________________________________________________________\n",
+            "Layer (type)                 Output Shape              Param #   \n",
+            "=================================================================\n",
+            "flatten_3 (Flatten)          (None, 784)               0         \n",
+            "_________________________________________________________________\n",
+            "dense_6 (Dense)              (None, 100)               78500     \n",
+            "_________________________________________________________________\n",
+            "dense_7 (Dense)              (None, 10)                1010      \n",
+            "=================================================================\n",
+            "Total params: 79,510\n",
+            "Trainable params: 79,510\n",
+            "Non-trainable params: 0\n",
+            "_________________________________________________________________\n",
+            "None\n"
           ],
           "name": "stdout"
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "<tensorflow.python.keras.callbacks.History at 0x7f1af0332e10>"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 7
         }
       ]
     },
@@ -260,17 +278,17 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "VOXDEJ5uNAYs",
-        "outputId": "359180ec-4df5-4aef-a60f-e398bd6ad418"
+        "outputId": "1e1178c5-29c2-4b9b-c6c3-5f480bd5ec72"
       },
       "source": [
         "model.evaluate(val_scaled, val_target_scaled)"
       ],
-      "execution_count": 8,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "375/375 [==============================] - 1s 1ms/step - loss: 0.4471 - accuracy: 0.8522\n"
+            "375/375 [==============================] - 1s 2ms/step - loss: 0.3973 - accuracy: 0.8708\n"
           ],
           "name": "stdout"
         },
@@ -278,13 +296,13 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "[0.4470882713794708, 0.8522499799728394]"
+              "[0.39729422330856323, 0.8708333373069763]"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 8
+          "execution_count": 9
         }
       ]
     }
